# Brand_guardian_automation

./: README.md  main.py  pyproject.toml  requirements.txt
backend/scripts/: index_documents.py
backend/src/api/: server.py  telemetry.py
backend/src/graph/: nodes.py  state.py
backend/src/services/: video_indexer.py
